added twitter share
Forgot to add image sharing for twitter

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
                 imageObj.onload = function() {
                     context.drawImage(imageObj, 0, 0);
                 };
-                imageObj.src = "darth-vader.jpg";
+                imageObj.src = "image.jpg";
 
             }
             function shareText( textToShare ) {
