--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
                 <p class="status complete blink hide">Device is Ready</p>
             </div>
             <button onclick="shareText('Send this message to someone!');">Click to share!</button>
-            <canvas id="canvas" width="438" height="300">No canvas support?</canvas>
+            <canvas id="canvas" width="200" height="200">No canvas support?</canvas>
             
         </div>
         <script type="text/javascript" src="cordova-2.0.0.js"></script>
@@ -53,7 +53,7 @@
                 imageObj.onload = function() {
                     context.drawImage(imageObj, 0, 0);
                 };
-                imageObj.src = "image.jpg";
+                imageObj.src = "bild.png";
 
             }
             function shareText( textToShare ) {
